--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "type": "git",
         "url": "https://github.com/diegocasagrande/pharmacy.git"
     },
-    "main": "api.js",
+    "main": "index.js",
     "scripts": {
-        "dev": "node src/api.js",
-        "start": "node api.js",
+        "dev": "node src/index.js",
+        "start": "node index.js",
         "test": "jest ./src/tests/units",
         "coverage": "jest --collectCoverageFrom=src/**.js --collectCoverageFrom=!src/index.js --coverage src"
     },
