--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "version": 2,
+    "cleanUrls": true,
     "builds": [
         {
             "src": "./index.js",
@@ -9,7 +10,18 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/",
+            "continue": true
         }
-    ]
+    ],
+    "headers": [
+        {
+          "source": "/contact",
+          "headers" : [
+            {
+              "key" : "Cache-Control",
+              "value" : "no-cache no-store must-revalidate"
+            }
+          ]
+        },    
   }
