--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
         {
             "src": "/(.*)",
             "dest": "/",
+            "headers": {
+                "key" : "Cache-Control",
+                "value" : "no-cache no-store must-revalidate"
+            },
             "continue": true
         },
         {
